<resources>
    <string name="app_name">WG-Buddy</string>
    <string name="informations_title">WG-Buddy > Informationen</string>
    <string name="main_title">WG-Buddy</string>
    <string name="message_create_title">WG-Buddy > Nachrichten> Nachricht erstellen</string>
    <string name="message_list_title">WG-Buddy > Nachrichten</string>
    <string name="preferences_title">WG-Buddy > Einstellungen</string>
    <string name="shopping_create_title">WG-Buddy > Einkaufszettel > Hinzufügen</string>
    <string name="shopping_list_title">WG-Buddy > Einkaufszettel</string>
    <string name="task_create_title">WG-Buddy > Aufgaben > Aufgabe erstellen</string>
    <string name="task_list_title">WG-Buddy > Aufgaben</string>
    <string name="user_activate_title">WG-Buddy > Benutzer aktivieren</string>
    <string name="user_create_title">WG-Buddy > Benutzer erstellen</string>
    <string name="user_login_title">WG-Buddy > Login</string>
    <string name="wg_create_title">WG-Buddy > WG erstellen</string>
    <string name="wg_login_title">WG-Buddy > WG beitreten</string>
    <string name="main_shoppinglist">Einkaufszettel</string>
    <string name="main_taskdistributor">Aufgaben</string>
    <string name="main_settings">Einstellungen</string>
    <string name="main_chat">Chat</string>
    <string name="main_information">Informationen</string>
    <string name="main_invite">Einladen</string>
    <string name="main_logout">Logout</string>
    <string name="menu_about">About</string>
    <string name="menu_menu">Hauptmenü</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_add">Hinzufügen</string>
    <string name="menu_refresh">Aktualisieren</string>
    <string name="preferences_wgpassword">WG-Passwort</string>
    <string name="preferences_createNewWG">Neue WG erstellen</string>
    <string name="preferences_connect">Beitreten</string>
    <string name="preferences_save">Speichern</string>
    <string name="preferences_username">Name</string>
    <string name="preferences_wgname">WG-Name</string>
    <string name="preferences_email">E-Mail</string>
    <string name="preferences_createWG">Erstellen</string>
    <string name="preferences_login">Login</string>
    <string name="preferences_password">Passwort</string>
    <string name="preferences_createuser">Neuen Benutzer erstellen</string>
    <string name="preferences_changeAdmin">Admin wechseln</string>
    <string name="preferences_leaveWG">WG verlassen</string>
    <string name="preferences_changePassword">Passwort ändern</string>
    <string name="preferences_changeWGPassword">WG-Passwort ändern</string>
    <string name="preferences_activateAccount">Konto aktivieren</string>
    <string name="preferences_leaveText">Sind Sie sicher, dass Sie die WG verlassen möchten? Sie werden anschließend automatisch ausgeloggt.</string>
    <string name="googleService_shoppingUpdated">Einkaufsliste wurde geupdated</string>
    <string name="googleService_taskUpdated">Aufgaben wurden geupdated</string>
    <string name="googleService_messageUpdated">Es sind neue Nachrichten im Chat</string>
    <string name="informations_wgName">WG-Name</string>
    <string name="informations_wgAdmin">WG-Admin</string>
    <string name="informations_wgPassword">WG-Passwort</string>
    <string name="informations_wgUser">WG-Bewohner</string>
    <string name="informations_points"> Punkte</string>
    <string name="shoppinglist_list">Einkaufsliste</string>
    <string name="shoppinglist_add">Hinzufügen</string>
    <string name="shoppinglist_complete">Gekauft</string>
    <string name="shoppinglist_delete">Löschen</string>
    <string name="shoppinglist_showAll">Alle anzeigen</string>
    <string name="shoppinglist_showMy">Meine anzeigen</string>
    <string name="shopping_ItemAdd">Hinzufügen</string>
    <string name="shopping_ItemName">Artikel</string>
    <string name="shopping_alreadyDeleted">Fehler: Artikel nicht mehr vorhanden.</string>
    <string name="shopping_alreadyPurchased">Artikel wurde schon eingekauft.</string>
    <string name="shopping_completedItem">Artikel wurde als gekauft gekennzeichnet.</string>
    <string name="shopping_deletedItem">Artikel wurde erfolgreich gelöscht.</string>
    <string name="shopping_created">Artikel wurde erfolgreich erstellt.</string>
    <string name="message_created">Nachricht wurde erfolgreich erstellt.</string>
    <string name="message_title">Titel</string>
    <string name="message_text">Nachricht</string>
    <string name="createuser_name">Name</string>
    <string name="createuser_email">Email-Adresse</string>
    <string name="createuser_email2">Email-Adresse (wiederholen)</string>
    <string name="createuser_password">Passwort</string>
    <string name="createuser_password2">Passwort (wiederholen)</string>
    <string name="createuser_lostpwd">Passwort vergessen</string>
    <string name="createuser_changePassword">Passwort ändern</string>
    <string name="createuser_create">Erstellen</string>
    <string name="createwg_create">Erstellen</string>
    <string name="createwg_name">WG-Name</string>
    <string name="createwg_password">Passwort</string>
    <string name="createwg_password2">Passwort (wiederholen)</string>
    <string name="shoppingRating">Wichtigkeit</string>
    <string name="shoppingDescription">Beschreibung</string>
    <string name="list_options">Einstellungen</string>
    <string name="list_optionsDialog_statusText">Filter</string>
    <string name="list_optionsDialog_sortText">Sortieren nach</string>
    <string name="list_optionsDialog_directionText">Richtung</string>
    <string name="list_entry_complete">Erledigt</string>
    <string name="list_entry_delete">Löschen</string>
    <string name="utilities_ok">OK</string>
    <string name="utilities_delete">Löschen</string>
    <string name="utilities_cancel">Abbrechen</string>
    <string name="utilities_email">E-Mail</string>
    <string name="utilities_key">Schlüssel</string>
    <string name="utilities_keyWrong">Schlüssel falsch</string>
    <string name="utilities_keyOrder">Schlüssel anfordern</string>
    <string name="utilities_keyMessage">Geben Sie bitte den Ihnen zugeschickten Schlüssel, sowie ein neues Passwort ein.</string>
    <string name="utilities_password">Passwort</string>
    <string name="utilities_password2">Passwort (wiederholen)</string>
    <string name="utilities_passwordOld">Altes Passwort</string>
    <string name="utilities_passwordWrong">Passwort falsch</string>
    <string name="utilities_passwordChange">Passwort ändern</string>
    <string name="utilities_passwordDifferent">Passwörter stimmen nicht überein.</string>
    <string name="utilities_emailDifferent">E-Mail Adressen stimmen nicht überein.</string>
    <string name="utilities_forbiddenSignsUsername">Benutzername enthält unerlaubte Zeichen. Es sind nur folgende Zeichen erlaubt: a–z A–Z 0–9</string>
    <string name="utilities_forbiddenSignsWGname">WG-Name enthält unerlaubte Zeichen. Es sind nur folgende Zeichen erlaubt: a–z A–Z 0–9</string>
    <string name="utilities_forbiddenEmail">E-Mail-Adresse ist fehlerhaft.</string>
    <string name="utilities_usernameAlreadyUsed">Benutzername ist schon vergeben.</string>
    <string name="utilities_usernamePasswordWrong">Der eingegebene Benutzername oder das Passwort ist falsch.</string>
    <string name="utilities_wgnamePasswordWrong">Der eingegebene WG Name oder das Passwort ist falsch.</string>
    <string name="utilities_emailAlreadyUsed">E-Mail ist schon vergeben.</string>
    <string name="utilities_wgnameAlreadyUsed">Benutzername ist schon vergeben.</string>
    <string name="utilities_passwordChangeSucceed">Passwort wurde erfolgreich geändert.</string>
    <string name="utilities_passwordOldNewMessage">Geben Sie bitte ihr altes Password, sowie ein neues Passwort ein.</string>
    <string name="utilities_passwordWGOldNewMessage">Geben Sie bitte das alte WG Passwort, sowie ein neues WG Passwort ein.</string>
    <string name="utilities_lostPasswordMessage">Bitte gebe deine E-Mail Adresse ein. Ein zufällig generierter Schlüssel wird dann an deine E-Mail Adresse geschickt.</string>
    <string name="utilities_activateMessage">Der Account wurde noch nicht aktiviert. Bitte geben Sie den Schlüssel ein, welcher Ihnen per E-Mail zugeschickt wurde.</string>
    <string name="utilities_activateEmailSendedMessage">Eine E-Mail mit dem Schlüssel wurde Ihnen zugesendet.</string>
    <string name="utilities_accountActivateSucceed">Account wurde erfolgreich aktiviert!</string>
    <string name="utilities_pleaseWait">Bitte warten</string>
    <string name="utilities_allFields">Alle Felder müssen ausgefüllt sein!</string>
    <string name="utilities_deleteQuestion">Sind Sie sicher, dass Sie den Eintrag löschen wollen?</string>
    <string name="utilities_logout">Sie haben sich erfolgreich ausgeloggt.</string>
    <string name="utilities_login">Sie haben sich erfolgreich eingeloggt.</string>
    <string name="utilities_createUser">Das Konto wurde erfolgreich erstellt.</string>
    <string name="utilities_createWG">Die WG wurde erfolgreich erstellt.</string>
    <string name="utilities_wgLogin">Sie sind der WG erfolgreich beigetreten.</string>
    <string name="utilities_saveError">Fehler beim Speichern. Versuchen Sie es bitte erneut.</string>
    <string name="utilities_inviteText">Bitte gebe die E-Mail Adresse ein um eine Person einzuladen.</string>
    <string name="utilities_inviteSucceed">Es wurde eine Einladung an die angegebene E-Mail Adresse geschickt.</string>
    <string name="utilities_passwordLostEmail">Ein Schlüssel wurde an die angegebene E-Mail Adresse geschickt.</string>
    <string name="utilities_noOtherUser">Es ist gerade kein anderer Bewohner in der WG.</string>
    <string name="utilities_leaveWGSucceed">Sie haben die WG erfolgreich verlassen.</string>
    <string name="utilities_changeAdminSucceed">Der WG-Admin wurde erfolgreich geändert.</string>
	<string name="utilities_activateAccount">Account aktivieren</string>
	<string name="utilities_fillAllFields">Bitte alle Felder ausfüllen</string>
	<string name="utilities_selectNewAdmin">Bitte wählen Sie einen neuen Admin aus.</string>
	<string name="utilities_aboutText">WG-Buddy ist eine im Rahmen des Wahlpflichtfaches Lange Programmiernächte an der HTWG Konstanz entwickelte Android-App.\n\nJens Küblbeck\nFelix Offergeld\nDominik Wieland\n\nVersion 1.0\n\nIm Handbuch finden Sie weitere Informationen.</string>
    <string name="utilities_aboutLink">http://wgbuddy.domoprojekt.de/WGBuddy%20Anwenderhandbuch.html</string>
    <string name="utilities_aboutLinkText">Handbuch</string>
    <string-array name="shoppingListStatus_array">
        <item>Alle Artikel</item>
        <item>Offene Artikel</item>
        <item>Gekaufte Artikel</item>
    </string-array>
    <string-array name="taskListStatus_array">
        <item>Alle Aufgaben</item>
        <item>Offene Aufgaben</item>
        <item>Erledigte Aufgaben</item>
    </string-array>
    <string-array name="shoppingListSort_array">
        <item>Artikel</item>
        <item>Datum</item>
        <item>Wichtigkeit</item>
        <item>Benutzer</item>        
    </string-array>
    <string name="userTaskName">Aufgabe</string>
    <string name="userTaskComment">Beschreibung</string>
    <string name="usertTaskRating">Punkte</string>
    <string name="usertask_completeentryName">Aufgabe</string>
    <string name="usertask_completeentrycomment">Kommentar</string>
    <string name="usertsack_completeentrypoints">Punkte</string>
    <string name="usertask_completeentrycreatedate">Ertellungsdatum</string>
    <string name="usertask_completeentrydeadline">Deadline</string>
    <string name="usertask_completeentrycleard">erledigt</string>
    <string name="task_users">Teilnehmer</string>
    <string name="userTaskgo">Los</string>
</resources>