<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/utilities_activateMessage"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/activate_user_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/utilities_key"
        android:maxLength="20"
        android:ems="10"
        android:inputType="textNoSuggestions" >

        <requestFocus />
    </EditText>
    
    <Button
        android:id="@+id/activate_user_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/utilities_ok" />
    
    <Button
        android:id="@+id/activate_user_newKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/utilities_keyOrder" />

</LinearLayout>