<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/main_headingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <Button
        android:id="@+id/main_shoppingListButton"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:drawableLeft="@drawable/dollar"
        android:layout_height="wrap_content"
        android:text="@string/main_shoppinglist" />
    <Button
        android:id="@+id/main_taskDistributorButton"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:drawableLeft="@drawable/task"
        android:layout_height="wrap_content"
        android:text="@string/main_taskdistributor" />

    <Button
        android:id="@+id/main_chatButton"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:drawableLeft="@drawable/chat"
        android:layout_height="wrap_content"
        android:text="@string/main_chat" />

    <Button
        android:id="@+id/main_preferencesButton"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:drawableLeft="@drawable/settings"
        android:layout_height="wrap_content"
        android:text="@string/main_settings" />

    <Button
        android:id="@+id/main_addButton"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:drawableLeft="@drawable/add"
        android:layout_height="wrap_content"
        android:text="@string/main_invite" />

</LinearLayout>