<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usertask_completeentryName" />

    <EditText
        android:id="@+id/usertask_completeentrynametext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usertask_completeentrycomment" />

    <EditText
        android:id="@+id/usertask_completeentrycommenttext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usertsack_completeentrypoints" />

    <RatingBar
        android:id="@+id/usertask_copleteentryratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usertask_completeentrycreatedate" />

    <EditText
        android:id="@+id/usertask_completeentrycreatedatetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usertask_completeentrydeadline" />

    <EditText
        android:id="@+id/usertask_completeentrydeadlinetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date" />

    <CheckBox
        android:id="@+id/usertask_completeentryclearedcheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usertask_completeentrycleard" />

</LinearLayout>