<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/ShoppingItemNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/shopping_ItemName"
        android:inputType="textNoSuggestions"
        android:maxLength="20" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/ShoppingDescriptionEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/shoppingDescription"
        android:lines="5"
        android:singleLine="false" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shoppingRating" />

    <RatingBar
        android:id="@+id/shoppingItemRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="1.0" />

    <Button
        android:id="@+id/shoppingItemAddButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shopping_ItemAdd" />

</LinearLayout>