<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userTaskName" />

        <EditText
            android:id="@+id/taskNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/userTaskName"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userTaskComment" />

        <EditText
            android:id="@+id/userTaskComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/userTaskComment"
            android:inputType="textMultiLine" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usertTaskRating" />

        <RatingBar
            android:id="@+id/taskRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rating="3.0"
            android:stepSize="1.0" />

        <Button
            android:id="@+id/task_userListButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_users"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/usertaskgoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userTaskgo" />
    </LinearLayout>

</ScrollView>