<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userTaskName" />


    <EditText
        android:id="@+id/taskNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userTaskComment" />

    <EditText
        android:id="@+id/userTaskComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usertTaskRating" />


    <RatingBar
        android:id="@+id/taskRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />






    <Button
        android:id="@+id/usertaskgoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userTaskgo" />

</LinearLayout>