<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/create_user_usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createuser_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/create_user_usernameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/createuser_name"
        android:inputType="textNoSuggestions"
        android:maxLength="20" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/create_user_emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createuser_email" />

    <EditText
        android:id="@+id/create_user_emailEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/createuser_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/create_user_email2Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createuser_email2" />

    <EditText
        android:id="@+id/create_user_email2Edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/createuser_email2"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/create_user_passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createuser_password" />

    <EditText
        android:id="@+id/create_user_passwordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/createuser_password"
        android:inputType="textPassword"
        android:maxLength="30" />

    <TextView
        android:id="@+id/create_user_password2Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createuser_password2" />

    <EditText
        android:id="@+id/create_user_password2Edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/createuser_password2"
        android:inputType="textPassword"
        android:maxLength="30" />

    <Button
        android:id="@+id/create_user_createButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createuser_create" />

</LinearLayout>