<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/create_wg_nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createwg_name" />

    <EditText
        android:id="@+id/create_wg_nameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textNoSuggestions"
        android:maxLength="20"
        android:hint="@string/createwg_name" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/create_wg_passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createwg_password" />

    <EditText
        android:id="@+id/create_wg_passwordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/createwg_password" />

    <TextView
        android:id="@+id/create_wg_password2Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createwg_password2" />

    <EditText
        android:id="@+id/create_wg_password2Edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/createwg_password2" />

    <Button
        android:id="@+id/create_wg_createButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createwg_create" />

</LinearLayout>