<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/ShoppingItemNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="20"
        android:inputType="textNoSuggestions"
        android:hint="@string/shopping_ItemName" >

        <requestFocus />
    </EditText>
    <EditText
        android:id="@+id/ShoppingDescriptionEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:singleLine="false"
        android:gravity="top"
        android:lines="5"
        android:hint="@string/shoppingDescription" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shoppingRating" />

    <RatingBar
        android:id="@+id/shoppingItemRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/deadLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Deadline" />

    <DatePicker
        android:id="@+id/shoppingDeadlineDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TimePicker
        android:id="@+id/shoppingDeadLineTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"  />

    <Button
        android:id="@+id/shoppingItemAddButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shopping_ItemAdd" />

</LinearLayout>